[project]
name = "pyspark-demo"
version = "0.1.1"
description = ""
authors = [
    {name = "Sam Nazarov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (==3.5.3)",
    "py4j (==0.10.9.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
nbmake = "^1.5.5"
